# Logic-Graph-Creator

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md  build_error.txt  gcov_coverage.sh  generate_ico_icns.py  logic-graph-creator.txt  macMakeRelease.py  opencpp_coverage.cmd
src/: CMakeLists.txt  app.cpp  app.h  block.h  blockContainer.cpp  blockContainer.h  blockContainerTool.h  blockContainerTools.cpp  blockContainerTools.h  cell.h  fastMath.h  gpu1.cpp  gpu1.h  logicGridWindow.cpp  logicGridWindow.h  main.cpp  mainWindow.ui  mainwindow.cpp  mainwindow.h  position.h  precompiled.h  sparse2d.h  test.cpp  types.h  viewMannager.cpp  viewMannager.h
src/backend/: address.h  backend.cpp  backend.h  block.h  blockContainer.cpp  blockContainer.h  cell.h  dataUpdateEventManager.cpp  dataUpdateEventManager.h  defs.h  position.h  selection.h  sparse2d.h  types.h
src/backend/block/: block copy.h  block.h  blockHelpers.h
src/backend/blockData/: blockData.h  blockDataManager.h
src/backend/circuit/: blockData.h  blockDataManager.h  circuit.cpp  circuit.h  circuitBlockData.h  circuitBlockDataManager.h  circuitManager.cpp  circuitManager.h  parsedCircuit.cpp  parsedCircuit.h  renderManager.cpp  renderManager.h  undoSystem.h  validateCircuit.cpp  validateCircuit.h
src/backend/circuitView/: circuitView.cpp  circuitView.h
src/backend/connection/: connectionContainer.cpp  connectionContainer.h  connectionEnd.h
src/backend/container/: blockContainer.cpp  blockContainer.h  blockContainerEditor.cpp  blockContainerEditor.h  cell.h  copiedBlocks.cpp  copiedBlocks.h  difference.h  minimalDifference.h
src/backend/evaluator/: EvaluatorLocalityVectorGenerator.h  addressTree.cpp  addressTree.h  atomicIndexScheduler.h  circuitLattice.h  circuitNode.h  diffCache.h  directionEnum.h  evalAddressTree.h  evalCircuit.cpp  evalCircuit.h  evalCircuitContainer.cpp  evalCircuitContainer.h  evalConfig.h  evalConnection.h  evalGate.h  evalSimulator.h  evalTypedef.h  evaluator.cpp  evaluator.h  evaluatorDefs.h  evaluatorManager.h  evaluatorStateInterface.h  gate.h  gateOperations.cpp  gateOperations.h  gateSubstituter.h  gateType.h  idProvider.h  junctionConjoiner.h  logicSImulator.cpp  logicSimulator.cpp  logicSimulator.h  logicSimulatorWrapper.cpp  logicSimulatorWrapper.h  logicState.h  objectCaches.h  replacer.h  simCounts.h  simulatorConnection.h  (+7 more)
src/backend/position/: position.h  sparse2d.h
src/backend/proceduralCircuits/: generatedCircuit.cpp  generatedCircuit.h  generatedCircuitValidator.cpp  generatedCircuitValidator.h  proceduralCircuit.cpp  proceduralCircuit.h  proceduralCircuitManager.cpp  proceduralCircuitManager.h  wasmProceduralCircuit.cpp  wasmProceduralCircuit.h
src/backend/settings/: keybind.h  settings.cpp  settings.h  settingsMap.h
src/backend/tools/: toolManagerManager.cpp  toolManagerManager.h
src/backend/wasm/: wasm.cpp  wasm.h
src/computerAPI/: directoryManager.cpp  directoryManager.h  fileLoader.cpp  fileLoader.h
src/computerAPI/circuits/: BLIFParser.cpp  BLIFParser.h  OpenCircuitsParser.cpp  OpenCircuitsParser.h  circuitFileManager.cpp  circuitFileManager.h  connectionMachineParser.cpp  connectionMachineParser.h  gatalityParser.cpp  gatalityParser.h  logisimParser.cpp  logisimParser.h  openCircuitsParser.cpp  openCircuitsParser.h  parsedCircuitLoader.cpp  parsedCircuitLoader.h  verilogYosysParser.cpp  verilogYosysParser.h  versatileParsedCircuit.h
src/computerAPI/fileListener/: fileListener.cpp  fileListener.h
src/computerAPI/resources/: resourceManager.cpp  resourceManager.h
src/evaluator/: gateOperations.cpp  gateOperations.h  gateType.h  logicSimulator.cpp  logicSimulator.h  logicState.h
src/gpu/: mainRenderer.cpp  mainRenderer.h  mainRendererDefs.h  vulkanBuffer.cpp  vulkanBuffer.h  vulkanContext.cpp  vulkanContext.h  vulkanDescriptor.h  vulkanDevice.cpp  vulkanDevice.h  vulkanDevicePicker.cpp  vulkanDevicePicker.h  vulkanFrame.cpp  vulkanFrame.h  vulkanImage.cpp  vulkanImage.h  vulkanInstance.cpp  vulkanInstance.h  vulkanManager.cpp  vulkanManager.h  vulkanPipeline.cpp  vulkanPipeline.h  vulkanPlatformBridge.cpp  vulkanPlatformBridge.h  vulkanQtWindow.cpp  vulkanQtWindow.h  vulkanRenderer.cpp  vulkanRenderer.h  vulkanShader.cpp  vulkanShader.h  vulkanSwapchain.cpp  vulkanSwapchain.h  vulkanUtil.cpp  vulkanUtil.h  vulkanVertices.h
src/gpu/abstractions/: vulkanBuffer.cpp  vulkanBuffer.h  vulkanCallStructs.h  vulkanDescriptor.cpp  vulkanDescriptor.h  vulkanImage.cpp  vulkanImage.h  vulkanPipeline.cpp  vulkanPipeline.h  vulkanShader.cpp  vulkanShader.h  vulkanSwapchain.cpp  vulkanSwapchain.h
src/gpu/helper/: nBuffer.cpp  nBuffer.h
src/gpu/renderer/: OLDvulkanSwapchain.cpp  frameManager.cpp  frameManager.h  oldVulkanSwapchain.cpp  rmlRenderer.cpp  (+33 more)
src/gui/: MainRenderer.h  MyViewFactory.cpp  MyViewFactory.h  blockCreationWindow.cpp  blockCreationWindow.h  blockRenderer.h  circuitViewUi.ui  circuitViewWidget.cpp  circuitViewWidget.h  controls.ui  controlsWindow.cpp  controlsWindow.h  evalWindow.cpp  evalWindow.h  helpDialog.cpp  helpDialog.h  helpDialog.ui  hotbar.ui  hotbarWindow.cpp  hotbarWindow.h  keyboardController.cpp  keyboardController.h  logicGridWindow.cpp  logicGridWindow.h  logicGridWindowData.h  mainWindow.cpp  mainWindow.h  mainWindow.ui  qtRenderer.cpp  qtRenderer.h  selector.ui  selectorWindow.cpp  selectorWindow.h  toolButton.ui  vulkanWindow.cpp  vulkanWindow.h  window.cpp  window.h  windowRenderer.cpp  windowRenderer.h
src/keybinds/: keybindManager.cpp  keybindManager.h
src/logging/: logger.cpp  logger.h  logging.cpp  logging.h
src/middleEnd/: action.h  blockContainerManager.h  blockContainerWrapper.cpp  blockContainerWrapper.h  difference.h  selection.h  undoSystem.h
src/platform/: SDLInstance.cpp  SDLInstance.h  sdlWindow.cpp  sdlWindow.h
src/util/: algorithm.h  bidirectionalMap.h  bidirectionalMultiSecondKeyMap.h  emptyVector.h  fastMath.h  fatal.cpp  fatal.h  lifetimeExtender.h  localityAllocator.h  multiTypeMap.h  uuid.h  vec2.h  vector2.h
src/wasm/: wasmTest.h
(+632 files in other folders)
